# CRUD4Embed

./: CMakeLists.txt  README.md  main.c  tcp.c
